<resources>
    <string name="app_name">Nutrition App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="analyize">Analyze</string>
    <string name="total_calories">Total Calories</string>
    <string name="label">Label</string>
    <string name="weight">Weight</string>
    <string name="daily_value">% Daily Value</string>
    <string name="total_calories_value">Total Calories %s</string>
    <string name="title_enter_ingredients">Enter your ingredient</string>
    <string name="note">Note: </string>
    <string name="note_desc">please, put all ingredient line by line</string>
    <string name="enter_valid_date">Please Enter Valid Data with food name, quantity and unit</string>
</resources>